Fix font sizing and spacing for text pages

--- a/src/assets/scss/layouts/container.scss
+++ b/src/assets/scss/layouts/container.scss
@@ -2,7 +2,7 @@
 .damoy__container {
   display: flex;
   flex-direction: column;
-  margin-bottom: 0;
+  padding-bottom: 7.4em;
   padding-top: 1.6em;
   height: 100%;
 
