--- a/src/assets/scss/layouts/content.scss
+++ b/src/assets/scss/layouts/content.scss
@@ -15,7 +15,7 @@
 
 .content__pages {
   color: #303030;
-  font-size: .82rem;
+  font-size: .82em;
   flex: 1 1 auto;
   align-self: center;
 
