--- a/src/assets/scss/layouts/footer.scss
+++ b/src/assets/scss/layouts/footer.scss
@@ -5,12 +5,7 @@
   flex-direction: row;
   padding: 0 5em 0;
   position: absolute;
-  margin-top: 4.8em;
   width: 100%;
-
-  @media (min-width: $screen-sm) {
-    position: relative;
-  }
 
   .eupopup-container-bottom {
     bottom: 0;
