--- a/src/assets/scss/layouts/pages.scss
+++ b/src/assets/scss/layouts/pages.scss
@@ -10,14 +10,21 @@
 }
 
 .pages--about {
-  max-width: 42.5rem;
+  max-width: 48.5em;
   width: 100%;
-  padding-right: 1.5rem;
   padding-left: 1.5rem;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
 }
 
 .pages--store,
 .pages--assistance {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -62,8 +69,6 @@
 }
 
 .pages--assistance {
-  flex-wrap: wrap;
-
   p {
     margin-bottom: 1rem;
   }
@@ -74,9 +79,9 @@
 
   .pages__column {
     @media (min-width: $screen-sm) {
-      width: 13.75rem;
-      margin-left: 1.5rem;
-      margin-right: 1.5rem;
+      width: 15em;
+      margin-left: 3em;
+      margin-right: 3em;
       padding: 0;
     }
   }
